# cgfx-lec-exp

./: .gitmodules  CMakeLists.txt  README.md
data/model/: gras1.vox  mycastle.vox  pacman.vox  pacman_walls.vox  pacman_walls2.vox
data/shader/: fragment.glsl  geometry.glsl  vertex.glsl
src/: README.md  camera.cpp  camera.h  collectible.h  entity.cpp  entity.h  game.h  impactsource.h  importMagicaVoxel.cpp  importMagicaVoxel.h  lightsource.cpp  lightsource.h  main.cpp  mesh.cpp  mesh.h  misccomponents.h  node.cpp  node.h  rendercomponent.h  renderer.cpp  renderer.h  shader.cpp  shader.h  tilemap3d.cpp  tilemap3d.h  transform.cpp  transform.h  utils.cpp  utils.h
